# tiny-loop

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  firekeeper.toml
crates/tiny-loop/: Cargo.toml
crates/tiny-loop-macros/: Cargo.toml  README.md
crates/tiny-loop-macros/src/: lib.rs  tool.rs
crates/tiny-loop/examples/: bind_tools.rs  chatbot.rs  custom_loop.rs  custom_tool_name.rs  fn_tools.rs  history.rs  mcp.rs
crates/tiny-loop/examples/common/: cli.rs  mod.rs  streaming_cli.rs
crates/tiny-loop/src/: agent.rs  error.rs  history.rs  lib.rs  llm.rs  loop.rs  tool.rs  types.rs
crates/tiny-loop/src/history/: infinite.rs
crates/tiny-loop/src/llm/: openai.rs
crates/tiny-loop/src/tool/: args.rs  closure.rs  executor.rs  fn.rs  fs.rs  utils.rs  web.rs
crates/tiny-loop/src/tool/executor/: parallel.rs  sequential.rs
crates/tiny-loop/src/types/: llm.rs  message.rs  mod.rs  tool.rs
crates/tiny-loop/tests/: tool_doc_comment.rs  tool_macro.rs
