[package]
name = "tiny-loop-macros"
version = "0.1.2"
edition = "2021"
authors = ["DiscreteTom"]
license = "MIT"
description = "Procedural macros for tiny-loop"
repository = "https://github.com/DiscreteTom/tiny-loop"
readme = "README.md"
keywords = ["ai", "agent", "llm", "macro"]
categories = ["development-tools"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
