[package]
name = "tiny-loop"
version = "0.4.1"
edition = "2024"
authors = ["DiscreteTom"]
license = "MIT"
description = "Minimal AI agent framework"
repository = "https://github.com/DiscreteTom/tiny-loop"
readme = "../../README.md"
keywords = ["ai", "agent", "llm", "openai"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
tiny-loop-macros = { version = "0.2.1", path = "../tiny-loop-macros" }
anyhow = "1"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json", "stream"] }
futures = "0.3"
async-trait = "0.1"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
rmcp = { version = "0.14", features = ["client", "transport-child-process"] }
